--- a/styles.css
+++ b/styles.css
@@ -101,27 +101,52 @@ body {
   }
 }
 
-/* media queries for screen size less than 800px */
+/* media queries for screen size less than 992px */
 
-@media (max-width: 800px) {
+@media (max-width: 992px) {
+  .menu {
+    padding: 0px 8vw;
+  }
+
   .menuBody {
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+  }
+
+  .menuItemLogo {
+    width: 300px;
+    height: 300px;
+    margin-bottom: 10px;
   }
 }
 
-/* media queries for screen size less than 500px */
+/* media queries for screen size less than 768px */
 
-@media (max-width: 500px) {
+@media (max-width: 768px) {
   .menuItemLogo {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
+  }
+}
+
+/* media queries for screen size less than 576px */
+
+@media (max-width: 576px) {
+  .menuBody {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .menuItemLogo {
+    width: 250px;
+    height: 250px;
+  }
+
+  .menuHeader h2 {
+    font-size: 30px;
   }
 }
 
 /* media queries for screen size less than 450px */
 
-@media (max-width: 450px) {
+/* @media (max-width: 450px) {
   .menuBody {
     grid-template-columns: repeat(1, 1fr);
     grid-auto-rows: minmax(100px, auto);
@@ -134,4 +159,4 @@ body {
   .menuHeader h2 {
     font-size: 30px;
   }
-}
+} */
