--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ font-family: 'Ubuntu', sans-serif; */
 body {
   width: 100%;
   font-family: "Nunito Sans", sans-serif;
-  /* overflow-y: hidden; */
 }
 
 .menu {
@@ -67,7 +66,6 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(100px, auto);
   gap: 30px;
-  /* padding: 0px 5vw; */
   margin-bottom: 50px;
 }
 
@@ -91,6 +89,8 @@ body {
 .menuItem p {
   font-size: 20px;
 }
+
+/* media queries */
 
 /* media queries for screen size less than 1200px */
 
@@ -134,6 +134,7 @@ body {
   .menuBody {
     grid-template-columns: repeat(1, 1fr);
   }
+
   .menuItemLogo {
     width: 250px;
     height: 250px;
@@ -143,20 +144,3 @@ body {
     font-size: 30px;
   }
 }
-
-/* media queries for screen size less than 450px */
-
-/* @media (max-width: 450px) {
-  .menuBody {
-    grid-template-columns: repeat(1, 1fr);
-    grid-auto-rows: minmax(100px, auto);
-  }
-  .menuItemLogo {
-    width: 250px;
-    height: 250px;
-  }
-
-  .menuHeader h2 {
-    font-size: 30px;
-  }
-} */
